# amphibious-bot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  circuit-diagram  working-video
arduino/bluetooth_passthrough/: bluetooth_passthrough.ino
arduino/motor_control/: motor_control.ino
ros2/amphibot_description/: CMakeLists.txt  package.xml
ros2/amphibot_description/config/: display.rviz
ros2/amphibot_description/launch/: bot.launch.py  display.launch.py  gazebo.launch.py  launch_sim.launch.py
ros2/amphibot_description/urdf/: amphibot.gazebo
ros2/amphibot_description/world/: custom_environment.world
